@@ -1,8 +1,8 @@
 #ifndef VERSION_H
 #define VERSION_H
 
-#define VERSION "VER. 2021-07-17"
-#define VERSION_NICKNAME "TOM BAKER"
+#define VERSION "VER. 2023-02-29"
+#define VERSION_NICKNAME "HTTPS"
 
 #endif // VERSION_H
 
